@@ -11,7 +11,8 @@
 Version 2.1-unreleased
 ======================
 
-*
+* integrated LoLA SCCs detection within inner markings
+
 Version 2.0 (26 August 2009)
 ============================
 
